--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 num = "0.2"
 rocksdb = "0.12.1"
+rustfft = "3.0.0"
+serde = "1.0.90"
+bincode = "1.1.3"
+serde_derive = "1.0.90"
+rand = "0.6.5"
