--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 [dependencies]
 num = "0.2"
-rocksdb = "0.12.1"
+rocksdb = "0.12.2"
 rustfft = "3.0.0"
 serde = "1.0.90"
 bincode = "1.1.3"
 serde_derive = "1.0.90"
 rand = "0.6.5"
+compression = "0.1.3"
