--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -21,5 +21,6 @@ queues = "1.1.0"
 nalgebra = "0.18.0"
 ndarray = "0.12.1"
 ndarray-linalg = ""
+#ndarray-linalg = { version = "0.11", features = ["openblas"] }
 #ndarray-linalg = { version = "0.11", features = ["netlib"] }
 #ndarray-linalg = { version = "0.11", features = ["intel-mkl"] }
