--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -42,3 +42,9 @@ bitpacking = "0.8.2"
 lazy_static = "1.4.0"
 croaring = "0.4.4"
 rust_decimal = "1.5.0"
+parquet = ""
+libc = "0.2"
+
+
+[build-dependencies]
+bindgen = "0.53.1"
