--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -44,7 +44,5 @@ croaring = "0.4.4"
 rust_decimal = "1.5.0"
 parquet = ""
 libc = "0.2"
+packed_simd = "0.3.3"
 
-
-[build-dependencies]
-bindgen = "0.53.1"
