remove simd for atom processor

--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -56,7 +56,7 @@ croaring = "0.4.4"
 rust_decimal = "1.5.0"
 parquet = ""
 libc = "0.2"
-packed_simd = "0.3.3"
+#packed_simd = "0.3.3"
 histogram = "0.6.9"
 itertools = "0.9.0"
 #plotters = "0.2.15"
