--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -36,6 +36,12 @@ path = "src/avl/main.rs"
 name = "outlier_exp"
 path = "src/outlier/main.rs"
 
+[[bin]]
+name = "bench"
+path = "src/benchmark/main.rs"
+
+
+
 
 [dependencies]
 num = "0.2"
@@ -43,9 +49,9 @@ log4rs = "0.10.0"
 log = "0.4.8"
 rocksdb = "0.12.4"
 rustfft = "3.0.1"
-serde = "1.0.90"
+serde = "1.0.126"
 bincode = "1.1.3"
-serde_derive = "1.0.90"
+serde_derive = "1.0.126"
 rand = "0.6.5"
 compression = "0.1.3"
 tokio = "0.1.19"
@@ -64,9 +70,9 @@ ndarray-linalg = { version = "0.11", features = ["intel-mkl"] }
 tsz = "0.1.0"
 bitpacking = "0.8.2"
 lazy_static = "1.4.0"
-croaring = "0.4.4"
+croaring = "0.5.0"
 rust_decimal = "1.5.0"
-parquet = ""
+parquet = "2.0.0"
 libc = "0.2"
 #packed_simd = "0.3.3"
 histogram = "0.6.9"
@@ -75,5 +81,5 @@ zipf = "7.0.0"
 permutation = "0.2.5"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9"
-#plotters = "0.2.15"
 myroaring = { version = "0.6.5", path = "../../roaring-rs" }
+my-bit-vec = { version = "0.6", path = "../../bit-vec"  }
